--- a/README.Rmd
+++ b/README.Rmd
@@ -1,8 +1,8 @@
 ---
 output: github_document
 ---
-
 <!-- README.md is generated from README.Rmd. Please edit that file -->
+<!-- You'll still need to render `README.Rmd` regularly, to keep `README.md` up-to-date. `devtools::build_readme()` is handy for this. -->
 
 ```{r, include = FALSE}
 knitr::opts_chunk$set(
@@ -13,13 +13,15 @@ knitr::opts_chunk$set(
 )
 ```
 
-# mmer <img src="man/figures/logo.png" align="right" height="139" alt="" />
+# mmer <img src="man/figures/logo.png" align="right" height="200" alt="" />
 
 
 <!-- badges: start -->
 <!-- badges: end -->
 
-The goal of mmer is to ...
+The package `mmer` is the software implementation of the Multimodel Marginal Epistasis test.
+
+<img src="man/figures/dhs_manhattan.png"  width="100%" alt="Erythroid differentiation DHS sites MME analysis" />
 
 ## Installation
 
@@ -30,27 +32,5 @@ You can install the development version of mmer from [GitHub](https://github.com
 devtools::install_github("jdstamp/mmer")
 ```
 
-## Example
 
-This is a basic example which shows you how to solve a common problem:
 
-```{r example}
-library(mmer)
-## basic example code
-```
-
-What is special about using `README.Rmd` instead of just `README.md`? You can include R chunks like so:
-
-```{r cars}
-summary(cars)
-```
-
-You'll still need to render `README.Rmd` regularly, to keep `README.md` up-to-date. `devtools::build_readme()` is handy for this.
-
-You can also embed plots, for example:
-
-```{r pressure, echo = FALSE}
-plot(pressure)
-```
-
-In that case, don't forget to commit and push the resulting figure files, so they display on GitHub and CRAN.
