--- a/README.Rmd
+++ b/README.Rmd
@@ -19,9 +19,24 @@ knitr::opts_chunk$set(
 <!-- badges: start -->
 <!-- badges: end -->
 
-The `mmer` package implements a computationally efficient method for detecting marginal epistasis in genome-wide association studies (GWAS).
+The `mmer` package implements a computationally and statistically efficient method for detecting marginal epistasis in genome-wide association studies (GWAS). 
+Find the full package documentation including examples and articles here: [Multimodal Marginal Epistasis test Documentation](https://jdstamp.github.io/mmer/).
 
-<img src="man/figures/dhs_manhattan.png"  width="100%" alt="Erythroid differentiation DHS sites MME analysis" />
+The method builds on
+
+- the Marginal Epistasis Test (MAPIT)
+- the multivariate Marginal Epistasis Test (mvMAPIT) 
+
+The package documentation for these methods including examples and articles can be found here: [Multivariate MAPIT Documentation](https://lcrawlab.github.io/mvMAPIT/). 
+
+<!-- <img src="man/figures/dhs_manhattan.png"  width="100%" alt="Erythroid differentiation DHS sites MME analysis" /> -->
+
+## Key Features
+
+-	Stochastic Trace Estimation: Enables computational speedup to scale to Biobank scale data.
+-	Multimodal Input: Incorporates prior data from HDF5 files to improve power in detecting gene-by-gene interactions.
+-	Optimize for Memory Constraints: Parameters like chunk size, number of random vectors, and number of blocks allow to optimize for low memory constraints or fast computation.
+-	Parallelization: Utilizes OpenMP for efficient multi-threaded processing.
 
 ## Installation
 
@@ -32,29 +47,23 @@ install.packages("devtools")
 devtools::install_github("jdstamp/mmer")
 ```
 
-## Key Features
-
--	Stochastic Trace Estimation: Enables computational speedup to scale to Biobank scale data.
--	Multimodal Input: Incorporates prior data from HDF5 files to improve power in detecting gene-by-gene interactions.
--	Optimize for Memory Constraints: Parameters like chunk size, number of random vectors, and number of blocks allow to optimize for low memory constraints or fast computation.
--	Parallelization: Utilizes OpenMP for efficient multi-threaded processing.
-
 ## Dependencies
 
-### HighFive
+The full list of R dependencies can be found in the [DESCRIPTION file](https://github.com/jdstamp/mmer/blob/main/DESCRIPTION).
 
-This package utilizes the [HighFive](https://github.com/BlueBrain/HighFive) library for efficient and index based access to masking data. HighFive is a modern C++11 header-only library that provides a user-friendly interface for reading, writing, and managing data in HDF5 format.
+This package depends on several C++ libraries to provide efficient functionality and performance. 
+Make sure the following software are installed and available on your system:
 
-HighFive was chosen for its:
+1. HDF5 - A file format and set of tools for managing complex data.
+2. Boost - A collection of portable C++ libraries that work well with the C++ Standard Library.
+3. OpenMP - A standard API for parallel programming in C, C++, and Fortran.
 
--	Ease of use: Provides an intuitive API for interacting with complex HDF5 datasets.
--	Performance: Offers efficient handling of large-scale data without compromising on speed.
--	Modern C++ support: Fully utilizes C++11 features, making it compatible with modern C++ applications.
-
-In this package, HighFive is used to read SNP specific masking data by accessing it by index.
+The package ships with the header-only HDF55 C++ library [HighFive](https://github.com/BlueBrain/HighFive).
+This package utilizes the  library for efficient and index based access to masking data. HighFive is a modern C++11 header-only library that provides a user-friendly interface for reading, writing, and managing data in HDF5 format.
 
 ## References
 
+- Stamp J, Crawford L (2024). mvMAPIT: Multivariate Genome Wide Marginal Epistasis Test. R package version 2.0.3, https://lcrawlab.github.io/mvMAPIT/, https://github.com/lcrawlab/mvMAPIT.
 -	Stamp et al. (2023): Leveraging genetic correlation between traits for epistasis detection in GWAS. G3: Genes, Genomes, Genetics.
 -	Crawford et al. (2017): Detecting epistasis with the marginal epistasis test. PLoS Genetics.
 - Devresse et al. (2024): HighFive - Header-only C++ HDF5 interface. https://zenodo.org/records/13120799
