--- a/README.Rmd
+++ b/README.Rmd
@@ -59,7 +59,7 @@ Make sure the following software are installed and available on your system:
 3. OpenMP
 
 The package ships with the header-only HDF55 C++ library [HighFive](https://github.com/BlueBrain/HighFive).
-This package utilizes the  library for efficient and index based access to masking data. HighFive is a modern C++11 header-only library that provides a user-friendly interface for reading, writing, and managing data in HDF5 format.
+It utilizes the  library for efficient and index based access to masking data.
 
 ## References
 
