--- a/vignettes/mmer.Rmd
+++ b/vignettes/mmer.Rmd
@@ -16,17 +16,16 @@ knitr::opts_chunk$set(
 )
 ```
 
-The Multimodal Marginal Epistasis test (MME) is designed to condition the genome-wide search for marginal epistasis in quantitative traits on multiple modes of genomic data to both maximize the power of the inference as well as realize the computational efficiency needed to analyze human Biobank scale data. The marginal epistasis framework tests for interactions between a focal variant with any other variant in the data. The multimodal step in the presented method conditions the search for interacting variants with the focal variant on functional genomic data.
+The Multimodal Marginal Epistasis test (MME) is designed to condition the genome-wide search for marginal epistasis in quantitative traits on multiple modes of genomic data. Applying appropriate masks that are informative of biological processes both maximizes the power of the inference as well as realizes the computational efficiency needed to analyze human Biobank scale data. The marginal epistasis framework tests for interactions between a focal variant with any other variant in the data. The multimodal step in the presented method conditions the search for interacting variants with the focal variant on functional genomic data.
 
 This pages presents a toy example to show case what insights the implementation of the test provides.
 
 ---
 
-<img src="../reference/figures/mme-schematic.png"  width="100%" alt="Multimodal Marginal Epistasis test (MME) schematic" />
+<img src="../reference/figures/mme-schematic-manhattan.png"  width="100%" alt="Multimodal Marginal Epistasis test (MME) schematic manhattan plot" />
 
-**Schematic overview of the multimodal marginal epistasis test (mme)**. **(A)** In the example of hematopoiesis, the open chromatin regions undergoes dynamic changes. In different cell types, different chromatin regions show transcriptional activity. The resulting cells are routinely measured in human subjects as hematology traits. **(B)** Cartoon of open chromatin data. DNase I hypersensitive sites are informative of transcriptional activity. The DNase-seq signal is converted to a binary mask, excluding genetic variants in closed inaccessible chromatin regions from the covariance matrix for marginal epistasis. **(C)** The multimodal marginal epistasis test incorporates functional data into the covariance matrix corresponding to the marginal epistasis variance component. **(D)** Cartoon illustrating the effect of applying appropriate masks to the marginal epistasis test. Masking both results in faster runtime and improved power to detect variants of small phenotypic variance explained over the full data.
-    The cell icons by [Servier](https://smart.servier.com/) are licensed under [CC-BY 3.0 Unported](https://creativecommons.org/licenses/by/3.0/).
-    
+Cartoon illustrating the effect of applying appropriate masks to the marginal epistasis test. Masking both results in faster runtime and improved power to detect variants of small phenotypic variance explained over the full data.
+
 ---
 
 ## Run MME on PLINK formatted data
