--- a/vignettes/tutorial-create-mask-file.Rmd
+++ b/vignettes/tutorial-create-mask-file.Rmd
@@ -26,9 +26,12 @@ accessible chromatin.
 
 ---
 
-<img src="../reference/figures/mme-schematic-dhs.png"  width="100%" alt="Multimodal Marginal Epistasis test (MME) schematic manhattan plot" />
+<img src="../reference/figures/mme-schematic-dhs.png"  width="100%" alt="Multimodal Marginal Epistasis test (MME) schematic DHS data" />
 
-Cartoon of how open chromatin data is converted to a binary mask. Open chromatin regions undergo dynamic changes during differentiation. In different cell types, different chromatin regions show transcriptional activity. DNase I hypersensitive sites are informative of transcriptional activity. The DNase-seq signal can be converted to a binary mask, excluding genetic variants in inaccessible chromatin regions from the covariance matrix for marginal epistasis.
+Cartoon of open chromatin data.  DNase I hypersensitive sites are informative of 
+transcriptional activity. The DNase-seq signal is converted to a binary mask. 
+Genetic variants in closed inaccessible chromatin regions are excluded from the 
+covariance matrix for marginal epistasis. 
 
 ---
 
