--- a/vignettes/tutorial-memory-optimization.Rmd
+++ b/vignettes/tutorial-memory-optimization.Rmd
@@ -47,7 +47,7 @@ For each set of SNPs analyzed together (in a “chunk”), intermediate results 
 ---
 
 <img src="../reference/figures/mme-shared-rvs.png"  width="100%" alt="Multimodal Marginal Epistasis test (MME) schematic pseudo-random vectors" />
-**Schematic overview illustrating the compuational speedup resulting from sharing random vectors. (A)** In the randomized trace estimates we can identify reusable matrix by vector products. Computing the exact trace of a product of two covariance matrices is prohibitively computationally expensive. Instead, the multimodal marginal epistasis (MME) test approximates the traces using random vectors $z$. For the full MQS computation of the point estimates of the variance components, we see that the matrix-by-vector products of the form $Az$ with $A \in \{K, G\}$ appear repeatedly. **(B)** The genetic relatedness matrix $K$ is the same for all focal SNPs. Using unique random vectors in this computation for every focal SNP, we compute the same quantity repeatedly. Computing the matrix-by-vector products $Kz$ constitutes almost half of the computation time of the point estimates. **(C)** By sharing random vectors $z$ between focal SNPs, computing $Kz$ can be done once for all focal SNPs that share random vectors. With this, the computation time of $Kz$ becomes negligible.
+**Schematic overview illustrating the compuational speedup resulting from sharing random vectors. (a)** In the randomized trace estimates we can identify reusable matrix by vector products. Computing the exact trace of a product of two covariance matrices is prohibitively computationally expensive. Instead, the multimodal marginal epistasis (MME) test approximates the traces using random vectors $z$. For the full MQS computation of the point estimates of the variance components, we see that the matrix-by-vector products of the form $Az$ with $A \in \{K, G\}$ appear repeatedly. **(b)** The genetic relatedness matrix $K$ is the same for all focal SNPs. Using unique random vectors in this computation for every focal SNP, we compute the same quantity repeatedly. Computing the matrix-by-vector products $Kz$ constitutes almost half of the computation time of the point estimates. **(c)** By sharing random vectors $z$ between focal SNPs, computing $Kz$ can be done once for all focal SNPs that share random vectors. With this, the computation time of $Kz$ becomes negligible.
 
 ---
 
