--- a/README.Rmd
+++ b/README.Rmd
@@ -76,8 +76,9 @@ For OS X and Linux, the OpenMP library can be installed via one of the (shell) c
 Compiling the package requires the compiler to find the libraries for the dependencies. 
 For unix systems, the libraries are typically installed at `/usr/local/lib` and `/usr/local/include`. 
 For users using OS X and homebrew, the libraries are typically installed at
-`/opt/homebrew/lib` and `/opt/homebrew/include`. 
+`/opt/homebrew/lib` and `/opt/homebrew/include`.
 
+Non-standard library paths need to be configured.
 The `src/Makevars` file configures the compiler flags for the compilation process and considers the 
 `LDFLAGS` and `CPPFLAGS` from the the R installation.
 These flags can be configured e.g. in `~/.R/Makevars`, or in the `$R_HOME/etc/Makeconf`.
