--- a/README.Rmd
+++ b/README.Rmd
@@ -13,7 +13,7 @@ knitr::opts_chunk$set(
 )
 ```
 
-# mmer - The Multimodal Marginal Epistasis test R implementation <img src="man/figures/logo.png" align="right" height="200" alt="" />
+# The Multimodal Marginal Epistasis test <img src="man/figures/logo.png" align="right" height="200" alt="" />
 
 
 <!-- badges: start -->
@@ -22,19 +22,12 @@ knitr::opts_chunk$set(
 The `mmer` package implements a computationally and statistically efficient method for detecting marginal epistasis in genome-wide association studies (GWAS). 
 Find the full package documentation including examples and articles here: [Multimodal Marginal Epistasis test Documentation](https://lcrawlab.github.io/mmer/).
 
-The method builds on
-
-- the Marginal Epistasis Test (MAPIT)
-- the multivariate Marginal Epistasis Test (mvMAPIT) 
-- the Fast Marginal Epistasis Test (FAME)
-
-The R package documentation for mvMAPIT including examples and articles can be found here: [Multivariate MAPIT Documentation](https://lcrawlab.github.io/mvMAPIT/). 
-
-
 ## Key Features
 
--	Stochastic Trace Estimation: Enables computational speedup to scale to Biobank scale data.
--	Multimodal Input: Incorporates prior data from HDF5 files to improve power in detecting gene-by-gene interactions.
+-	Hutchinson's stochastic trace estimator: efficient and scalable computation
+- Mailman algorithm: fast vector-by-matrix operation
+-	Linear mixed model: controls for population structure
+- Multimodal Input: incorporates additional data from HDF5 files to improve power in detecting gene-by-gene interactions.
 -	Optimize for Memory Constraints: Highly configurable block wise processing of the data allows to make the most of available resources. See also [How To Optimize the Memory Requirements of MME](articles/tutorial-memory-optimization.html).
 -	Parallelization: Utilizes OpenMP for multi-threaded processing.
 
@@ -49,20 +42,25 @@ devtools::install_github("lcrawlab/mmer")
 
 ## Dependencies
 
+System requirements of the package:
+
+- GNU make
+- R (>= 2.10)
+- Rhdf5lib (from BioConductor)
+- OpenMP (optional)
+
+To install `Rhdf5lib`, first
+install the tool `BiocManager` from CRAN, then install the library using this tool.
+
+```
+if (!require("BiocManager", quietly = TRUE))
+    install.packages("BiocManager")
+BiocManager::install("Rhdf5lib")
+```
+
 The full list of R dependencies can be found in the [DESCRIPTION file](https://github.com/lcrawlab/mmer/blob/main/DESCRIPTION).
 
-This package depends on several C++ libraries to provide efficient functionality and performance. 
-Make sure the following software are installed and available on your system:
-
-1. HDF5
-2. OpenMP
-
-For OS X and Linux the HDF5 library can be installed via one of the (shell) commands specified below:
-
-| System                                    | Command
-|:------------------------------------------|:-----------------------------------------|
-|**OS X (using Homebrew)**                  | `brew install hdf5`                      |
-|**Debian-based systems (including Ubuntu)**| `sudo apt-get install libhdf5-dev`|
+### OpenMP
 
 For OS X and Linux, the OpenMP library can be installed via one of the (shell) commands specified below:
 
@@ -70,6 +68,14 @@ For OS X and Linux, the OpenMP library can be installed via one of the (shell) c
 |:------------------------------------------|:-----------------------------------------|
 | **OS X (using Homebrew)**                 | `brew install libomp`                    |
 |**Debian-based systems (including Ubuntu)**| `sudo apt-get install libomp-dev`        |
+
+
+To enable openMP, it may be necessary to configure the compiler flag `SHLIB_OPENMP_CXXFLAGS` in the `~/.R/Makevars` file.
+
+| System  | Flag                                            |
+|---------|-------------------------------------------------|
+| Linux   | `SHLIB_OPENMP_CXXFLAGS = -Xclang -fopenmp -lomp`|
+| OS X    | `SHLIB_OPENMP_CXXFLAGS = -fopenmp -lomp`        |
 
 ## Known Issues
 
@@ -79,19 +85,9 @@ For users using OS X and homebrew, the libraries are typically installed at
 `/opt/homebrew/lib` and `/opt/homebrew/include`.
 
 Non-standard library paths need to be configured.
-The `src/Makevars` file configures the compiler flags for the compilation process and considers the 
-`LDFLAGS` and `CPPFLAGS` from the the R installation.
-These flags can be configured e.g. in `~/.R/Makevars`, or in the `$R_HOME/etc/Makeconf`.
-The home directory can be found in the R console with `R.home()`.
+The `src/Makevars` file configures the compiler flags and considers the 
+`LDFLAGS` and `CPPFLAGS` from the `~/.R/Makevars` file.
 
-Using openMP requires configuration of the flag `SHLIB_OPENMP_CXXFLAGS` in the `Makeconf` file.
-
-| System  | Flag                                            |
-|---------|-------------------------------------------------|
-| Linux   | `SHLIB_OPENMP_CXXFLAGS = -Xclang -fopenmp -lomp`|
-| OS X    | `SHLIB_OPENMP_CXXFLAGS = -fopenmp -lomp`        |
-
-On Ubuntu, `libhdf5-dev` has a subdirectory `serial` which if not properly linked to standard include paths is not found.
 
 ## References
 
