--- a/vignettes/mmer.Rmd
+++ b/vignettes/mmer.Rmd
@@ -16,7 +16,13 @@ knitr::opts_chunk$set(
 )
 ```
 
-The Multimodal Marginal Epistasis test (MME) is designed to condition the genome-wide search for marginal epistasis in quantitative traits on multiple modes of genomic data. Applying appropriate masks that are informative of biological processes both maximizes the power of the inference as well as realizes the computational efficiency needed to analyze human Biobank scale data. The marginal epistasis framework tests for interactions between a focal variant with any other variant in the data. The multimodal step in the presented method conditions the search for interacting variants with the focal variant on functional genomic data.
+The multimodal marginal epistasis (MME) test performs a genome-wide search for SNPs involved in genetic interactions while conditioning on information derived from functional genomic data.
+
+By examining one SNP at a time, MME fits a linear mixed model to test for marginal epistasis.
+It explicitly models the combined additive effects from all SNPs a marginal epistatic effect that represents pairwise interactions involving a test SNP.
+
+The key to the MME formulation is that the interaction between the test SNP and other SNPs may be masked depending on additional information.
+Masking interactions that do not contribute to trait variance both maximizes the power of the inference as well as realizes the computational efficiency needed to analyze human Biobank scale data.
 
 This pages presents a toy example to show case what insights the implementation of the test provides.
 
@@ -24,11 +30,11 @@ This pages presents a toy example to show case what insights the implementation 
 
 <img src="../reference/figures/mme-schematic-manhattan.png"  width="100%" alt="Multimodal Marginal Epistasis test (MME) schematic manhattan plot" />
 
-Cartoon illustrating the effect of applying appropriate masks to the marginal epistasis test. Masking not only results improved power to detect variants of small phenotypic variance explained over the full data, but also in faster runtime.
+**Figure 1. ** MME performs a genome-wide search for SNPs involved in genetic interactions while conditioning on information derived from functional genomic data. MME has improved power to detect marginal epistasis and runs 10x to 90x faster than state-of-the-art methods.
 
 ---
 
-## Run MME on PLINK formatted data
+## Run MME with PLINK data
 
 ```{r setup}
 library(mmer)
@@ -36,14 +42,23 @@ library(dplyr)
 library(ggplot2)
 ```
 
-The R implementation of MME requires a dataset in PLINK format (i.e. `.bim`, `.bed`, and `.fam` files) to provide the genotype data. The phenotype data should be provided in a separate file that also follows the PLINK format for phenotypes. See `mme()` for the full documentation of the function arguments.
+### Data Requirements and File Formats
 
-The function `mme()` provides parameters that allow to optimize the usage of available resources. 
-See [How To Optimize the Memory Requirements of MME](articles/tutorial-memory-optimization.html) for a
-discussion of how to optimize for available resources.
+MME is implemented in R and requires your genetic data to be in PLINK format, which consists of three files:
+- `.bim`: Contains SNP information
+- `.bed`: Contains genetic data
+- `.fam`: Contains sample information
 
-Lastly, the function asks for **1-based** indices of which SNPs to analyze. These indices map 
-to variants corresponding the 1-based row-indices of the `.bim` file.
+Additionally, your phenotype (trait) data should be in a separate file following PLINK's phenotype format.
+
+The `mme()` function includes parameters that let you control memory usage and computational resources. For detailed guidance on optimizing these settings for your system, please see our tutorial [How To Optimize the Memory Requirements of MME](articles/tutorial-memory-optimization.html).
+
+### Specifying SNPs for Analysis
+
+When selecting which SNPs to analyze, you must provide their positions as **1-based indices**. These indices correspond to the row numbers in your `.bim` file, where the first SNP is index 1, the second is index 2, and so on.
+
+For complete details about all function parameters, please refer to the documentation of the `mme()` function.
+
 
 ```{r run_mme, eval = FALSE}
 # File inputs
@@ -78,19 +93,15 @@ mme_result <- mme(
 mme_result <- getting_started
 ```
 
-The data analyzed in this example was simulated for illustration purposes. 
-See [How To Simulate Traits](articles/tutorial-simulate-traits.html) to go over the data simulation example.
+This analysis uses simulated data for demonstration purposes. If you would like to learn how we created this data, please refer to our tutorial [How To Simulate Traits](articles/tutorial-simulate-traits.html).
 
-The return object of the function call `mme()` is a named list. The summary of the analysis can easily be
-accessed by the name `summary`. The results are stored as [tidy data](https://vita.had.co.nz/papers/tidy-data.html). As such, they are ready to be analyzed using tidy data
-compatible tools such as `ggplot2` and `dplyr`.
+### Understanding the Results
 
-### Manhattan Plot
+When you call the `mme()` function, it returns a list containing multiple elements. The most important one is called `summary`, which contains the main analysis results. These results are formatted as tidy data, making them compatible with popular R packages like `ggplot2` and `dplyr` for further analysis and visualization.
 
-A common visualization of genome-wide analyses are Manhattan plots. They easily show
-strong signals of association. In the case of marginal epistasis, the signal of association
-is specific to statistical epistasis. In the figure below, SNPs that were true causal
-SNPs in the data simulation are highlighted in green.
+### Visualizing Genomic Associations
+
+We use Manhattan plots to visualize genome-wide analyses because they effectively highlight strong associations between genetic variants and traits. In this case, the Manhattan plot specifically shows statistical epistasis (interactions between genes). For reference, we've marked the true causal SNPs (Single Nucleotide Polymorphisms) in green on the plot - these are the genetic variants we included in our simulation as having real effects.
 
 ```{r manhattan_plot, fig.alt="Manhattan plot to illustrate the multimodal marginal epistasis test"}
 mme_result$summary %>%
@@ -104,13 +115,16 @@ mme_result$summary %>%
   labs(color = "Epistatic SNP")
 ```
 
-### Phenotypic Variance Explained by Marginal Epistasis
+### Understanding Variance Components and Effect Sizes
 
-MME estimates the variance component that can be attributed to marginal epistasis.
-The per SNP Phenotypic Variance Explained (PVE) for marginally epistatic SNPs in
-this example was simulated to be 5%. This true PVE is indicated as dashed line
-in the following plot. It shows the distribution of PVE estimates for true epistatic
-SNPs and non-epistatic SNPs.
+MME estimates how much of the total trait variation can be explained by genetic interactions. In this simulation, we set the Phenotypic Variance Explained (PVE) to 5% for each SNP involved in epistatic interactions.
+
+The plot below shows how well our method recovered these effects. It displays two distributions:
+
+1. The estimated PVE for SNPs we know are truly involved in epistatic interactions
+2. The estimated PVE for SNPs that have no real epistatic effects
+
+The dashed line marks the true 5% PVE level we used in the simulation, allowing you to see how accurately the method estimated the actual effect sizes.
 
 ```{r pve_plot, fig.alt="PVE plot to illustrate the multimodal marginal epistasis test"}
 mme_result$summary %>%
@@ -124,13 +138,17 @@ mme_result$summary %>%
 
 ### Narrow Sense Heritability Estimates
 
-As linear mixed model, MME also fits the variance attributable to genetic relatedness.
-Therefore, the results also provide trait estimates of the narrow sense heritability $h^2$.
-The true narrow sense heritability in the simulations that generated the data
-was 30% and and is indicated as dashed line in the plot of the variance commponent estimates
-plotted below. The narrow sense heritability is indicated by the tick label `grm`.
-The tick label `gxg` indicates the gene-by-gene interaction variance component. 
-The `error` component is the unexplained variance, e.g. caused by environmental effects.
+The MME method uses a linear mixed model to separate different sources of trait variation. One key component it estimates is narrow sense heritability ($h^2$), which measures how much trait variation can be explained by additive genetic effects.
+
+The plot below breaks down the estimated sources of trait variation:
+
+- "grm": Shows narrow sense heritability ($h^2$)
+- "gxg": Shows variance due to gene-by-gene interactions
+- "error": Shows unexplained variance, such as environmental effects
+
+In our simulation, we set the true narrow sense heritability to 30%, shown as a
+dashed line in the plot. This reference line helps you evaluate how accurately MME estimated the genetic components of trait variation.
+
 
 ```{r h2_plot, fig.alt="h2 plot to illustrate the multimodal marginal epistasis test"}
 mme_result$vc_estimate %>%
